[gd_scene load_steps=4 format=3 uid="uid://dpvwtmpnm8ibu"]

[ext_resource type="Script" uid="uid://c8mviiu0bctu4" path="res://start_screen/start_screen.gd" id="1_pevhg"]
[ext_resource type="Theme" uid="uid://cuqmn3lhjdfe5" path="res://assets/themes/os_95.tres" id="2_pevhg"]
[ext_resource type="Texture2D" uid="uid://d2etpwefg0clb" path="res://assets/ui/icons/PhotoLoopIcon.png" id="3_og173"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_pevhg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DesktopBg" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.435294, 0.54902, 0.501961, 1)
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_right = 258.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_pevhg")
disabled = true
text = "â†’"

[node name="UsernameInput" type="LineEdit" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 375.0
offset_top = 360.0
offset_right = 845.0
offset_bottom = 400.0
theme = ExtResource("2_pevhg")
placeholder_text = "Enter Username"
caret_blink = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.404
anchor_right = 0.501
anchor_bottom = 0.404
offset_left = -50.28
offset_top = -49.88
offset_right = 49.72
offset_bottom = 50.12
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_og173")
